fix: min width to trigger overflow on pre code
https://stackoverflow.com/questions/36247140/why-dont-flex-items-shrink-past-content-size

--- a/site/src/tailwind.css
+++ b/site/src/tailwind.css
@@ -95,7 +95,7 @@ tr > td {
 }
 
 .right-col {
-  @apply w-full ml-6;
+  @apply ml-6 flex-1 min-w-0;
 }
 
 /* main */
